# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2009-11-22  Christian Heller  <christian.heller@tuxtax.de>
        * Adapt files in "executor" directory to new structure

2009-11-18  Christian Heller  <christian.heller@tuxtax.de>
        * Update architecture document in OpenOffice and PDF format

2009-11-09  Christian Heller  <christian.heller@tuxtax.de>
        * Debug source code by cleaning up errors stemming from previously implemented array changes
        * Spread array functions to different files
        * Rename "memoriser" directory into "executor"
        * Restructure and partly rename files in "executor" directory

2009-10-09  Christian Heller  <christian.heller@tuxtax.de>
        * Convert source code repository from Concurrent Versions System (CVS) to Subversion (SVN)

2009-10-06  Christian Heller  <christian.heller@tuxtax.de>
        * Convert memory abstraction constants from strings to numbers,
            for arrays, primitives vectors, compound types etc.
        * Merge array abstraction constants into file "memory_abstraction.c"
        * Add primitive operations for adding, multiplying, comparing values
        * Simplify and unify array functions by introducing NEW files with functions
            to "assign", "compare", "add" values of primitive data types;
            that way, the type handling is outsourced and redundancies are avoided
        * Add reworked array files (assigner, comparator, multiplier etc.) into directory "memoriser"
        * Delete now outdated directory "memoriser/array/"

2009-07-30  Christian Heller  <christian.heller@tuxtax.de>