@@ -35,283 +35,13 @@
 #include "../../variable/primitive_type_size.c"
 
 /**
- * Compares the character values.
- *
- * @param p0 the result (number 1 if equal; unchanged otherwise)
- * @param p1 the first element
- * @param p2 the second element
- */
-void compare_character(void* p0, void* p1, void* p2) {
-
-    if (p2 != *NULL_POINTER_MEMORY_MODEL) {
-
-        char* e2 = (char*) p2;
-
-        if (p1 != *NULL_POINTER_MEMORY_MODEL) {
-
-            char* e1 = (char*) p1;
-
-            if (p0 != *NULL_POINTER_MEMORY_MODEL) {
-
-                int* r = (int*) p0;
-
-                log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Compare character values.");
-
-                if (*e1 == *e2) {
-
-                    // Set result to number one only if areas are equal.
-                    *r = *NUMBER_1_INTEGER_MEMORY_MODEL;
-                }
-
-            } else {
-
-                log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare character values. The result is null.");
-            }
-
-        } else {
-
-            log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare character values. The first element is null.");
-        }
-
-    } else {
-
-        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare character values. The second element is null.");
-    }
-}
-
-/**
- * Compares the double values.
- *
- * @param p0 the result (number 1 if equal; unchanged otherwise)
- * @param p1 the first element
- * @param p2 the second element
- */
-void compare_double(void* p0, void* p1, void* p2) {
-
-    if (p2 != *NULL_POINTER_MEMORY_MODEL) {
-
-        double* e2 = (double*) p2;
-
-        if (p1 != *NULL_POINTER_MEMORY_MODEL) {
-
-            double* e1 = (double*) p1;
-
-            if (p0 != *NULL_POINTER_MEMORY_MODEL) {
-
-                int* r = (int*) p0;
-
-                log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Compare double values.");
-
-                if (*e1 == *e2) {
-
-                    // Set result to number one only if areas are equal.
-                    *r = *NUMBER_1_INTEGER_MEMORY_MODEL;
-                }
-
-            } else {
-
-                log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare double values. The result is null.");
-            }
-
-        } else {
-
-            log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare double values. The first element is null.");
-        }
-
-    } else {
-
-        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare double values. The second element is null.");
-    }
-}
-
-/**
- * Compares the integer values.
- *
- * @param p0 the result (number 1 if equal; unchanged otherwise)
- * @param p1 the first element
- * @param p2 the second element
- */
-void compare_integer(void* p0, void* p1, void* p2) {
-
-    if (p2 != *NULL_POINTER_MEMORY_MODEL) {
-
-        int* e2 = (int*) p2;
-
-        if (p1 != *NULL_POINTER_MEMORY_MODEL) {
-
-            int* e1 = (int*) p1;
-
-            if (p0 != *NULL_POINTER_MEMORY_MODEL) {
-
-                int* r = (int*) p0;
-
-                log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Compare integer values.");
-
-                if (*e1 == *e2) {
-
-                    // Set result to number one only if areas are equal.
-                    *r = *NUMBER_1_INTEGER_MEMORY_MODEL;
-                }
-
-            } else {
-
-                log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare integer values. The result is null.");
-            }
-
-        } else {
-
-            log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare integer values. The first element is null.");
-        }
-
-    } else {
-
-        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare integer values. The second element is null.");
-    }
-}
-
-/**
- * Compares the pointer values.
- *
- * @param p0 the result (number 1 if equal; unchanged otherwise)
- * @param p1 the first element
- * @param p2 the second element
- */
-void compare_pointer(void* p0, void* p1, void* p2) {
-
-    if (p2 != *NULL_POINTER_MEMORY_MODEL) {
-
-        void** e2 = (void**) p2;
-
-        if (p1 != *NULL_POINTER_MEMORY_MODEL) {
-
-            void** e1 = (void**) p1;
-
-            if (p0 != *NULL_POINTER_MEMORY_MODEL) {
-
-                int* r = (int*) p0;
-
-                log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Compare pointer values.");
-
-                if (*e1 == *e2) {
-
-                    // Set result to number one only if areas are equal.
-                    *r = *NUMBER_1_INTEGER_MEMORY_MODEL;
-                }
-
-            } else {
-
-                log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare pointer values. The result is null.");
-            }
-
-        } else {
-
-            log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare pointer values. The first element is null.");
-        }
-
-    } else {
-
-        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare pointer values. The second element is null.");
-    }
-}
-
-/**
- * Compares the unsigned long values.
- *
- * @param p0 the result (number 1 if equal; unchanged otherwise)
- * @param p1 the first element
- * @param p2 the second element
- */
-void compare_unsigned_long(void* p0, void* p1, void* p2) {
-
-    if (p2 != *NULL_POINTER_MEMORY_MODEL) {
-
-        unsigned long* e2 = (unsigned long*) p2;
-
-        if (p1 != *NULL_POINTER_MEMORY_MODEL) {
-
-            unsigned long* e1 = (unsigned long*) p1;
-
-            if (p0 != *NULL_POINTER_MEMORY_MODEL) {
-
-                int* r = (int*) p0;
-
-                log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Compare unsigned long values.");
-
-                if (*e1 == *e2) {
-
-                    // Set result to number one only if areas are equal.
-                    *r = *NUMBER_1_INTEGER_MEMORY_MODEL;
-                }
-
-            } else {
-
-                log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare unsigned long values. The result is null.");
-            }
-
-        } else {
-
-            log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare unsigned long values. The first element is null.");
-        }
-
-    } else {
-
-        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare unsigned long values. The second element is null.");
-    }
-}
-
-/**
- * Compares the wide character values.
- *
- * @param p0 the result (number 1 if equal; unchanged otherwise)
- * @param p1 the first element
- * @param p2 the second element
- */
-void compare_wide_character(void* p0, void* p1, void* p2) {
-
-    if (p2 != *NULL_POINTER_MEMORY_MODEL) {
-
-        wchar_t* e2 = (wchar_t*) p2;
-
-        if (p1 != *NULL_POINTER_MEMORY_MODEL) {
-
-            wchar_t* e1 = (wchar_t*) p1;
-
-            if (p0 != *NULL_POINTER_MEMORY_MODEL) {
-
-                int* r = (int*) p0;
-
-                log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Compare wide character values.");
-
-                if (*e1 == *e2) {
-
-                    // Set result to number one only if areas are equal.
-                    *r = *NUMBER_1_INTEGER_MEMORY_MODEL;
-                }
-
-            } else {
-
-                log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare wide character values. The result is null.");
-            }
-
-        } else {
-
-            log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare wide character values. The first element is null.");
-        }
-
-    } else {
-
-        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare wide character values. The second element is null.");
-    }
-}
-
-/**
- * Compares the values depending on the given primitive type.
+ * Compares values.
  *
  * @param p0 the result (number 1 if equal; unchanged otherwise)
  * @param p1 the first array
  * @param p2 the second array
  * @param p3 the offset
- * @param p4 the array type
+ * @param p4 the type
  */
 void compare(void* p0, void* p1, void* p2, void* p3, void* p4) {
 
